# ITK-Academy-testovoe

./: .dockerignore  .env.dev  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b7f07299358_initial_migration.py
scripts/: initdb.py
src/: config.py  database.py  main.py
src/api/v1/wallets/: models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/routes/: test_wallets_routes.py
